--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@git-file/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "nx run-many --target=build --all --parallel",
+    "dev": "nx run-many --target=dev --all --parallel",
+    "core": "nx dev core",
+    "api": "nx dev api"
+  },
   "private": true,
   "dependencies": {
     "@nx/next": "17.2.8",
@@ -35,8 +40,6 @@
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
     "nx": "17.2.8",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
